--- a/roles/kickstart/defaults/main.yml
+++ b/roles/kickstart/defaults/main.yml
@@ -6,6 +6,6 @@ kickstart_pkgs:
   - syslinux-tftpboot
   - createrepo
   - httpd
-kickstart_tftpdir: /var/lib/tftpboot
+kickstart_tftpdir: /tftpboot
 # you'll need to set this
 # kickstart_server: set_this_variable_in_role_defaults_or_groupvars
